# iis_motion_planning

./: .gitignore  INSTALL_DEPENDENCIES.sh  README  README.md  makefile
KOMO/: README.md  README.mlr.md  notes.txt
KOMO/install/: INSTALL_ALL_UBUNTU_PACKAGES.sh
KOMO/share/: Makefile.gof
KOMO/share/data/: Re- motion optimization.eml
KOMO/share/data/kuka_schunk/: kuka_schunk.ors
KOMO/share/data/kuka_schunk/kuka/.svn/: all-wcprops  entries
KOMO/share/data/kuka_schunk/kuka/.svn/text-base/: kuka_base_lo.obj.svn-base  kuka_link1_lo.obj.svn-base  kuka_mid.obj.svn-base
KOMO/share/data/kuka_schunk/schunk/: 3385031117_vbe_1212_x.tri  3385031317_vbe_1010_x.tri  3385038717_vbe_0806_x.tri  SDH_Gehaeuse_x.tri  schunk_0306910_prl_6010_x.tri  schunk_0306920_prl_10010_x.tri  schunk_05517279_prl_80_810_x.tri
KOMO/share/data/kuka_schunk/schunk/.svn/: all-wcprops  entries
KOMO/share/data/kuka_schunk/schunk/.svn/text-base/: 3385031717_vbe_0606_x.tri.svn-base  3385038117_vbe_1210_x.tri.svn-base  SDH_Gelenk_Finger1_x.tri.svn-base  SDH_Mittelteil_Finger1_x.tri.svn-base  schunk_0306915_prl_8010_x.tri.svn-base  schunk_0306925_prl_12010_x.tri.svn-base  (+2 more)
KOMO/share/data/pr2_model/: HOWTO.sh  make_move_groups.py  pr2-3-comfi.ors  pr2-with-ft-sensors.urdf  pr2_after.ors  pr2_arm.ors  pr2_before.ors  pr2_clean.ors  pr2_clean_leftOnly.ors  pr2_left.ors  pr2_left_arm.ors  pr2_model.ors  pr2_modifications.ors  pr2_move_groups.ors  urdf2ors.py
KOMO/share/examples/KOMO/easy/: MT.cfg  Makefile.gof  main.cpp  model.kvg  z.AnyTimeAugmentedLagrangian  z.costReport  z.costReport.plt  z.opt
KOMO/share/examples/KOMO/ikea_chair/: MT.cfg  chair_back.off  chair_back_rem.off  chair_back_scaled.off  chair_back_scaled.wrl  chair_leg.off  chair_leg_scaled.off  chair_sitting_scaled.off  constraints.txt  ikea.kvg  ikea2.kvg.txt  main.cpp  model.kvg  pr2_augmentations.ors  z.costReport  z.costReport.plt  z.opt  z.plotcmd
KOMO/share/examples/Ors/ors_editor/: MT.cfg  Makefile.gof  andreasHand.ors  cabinet.ors  car.ors  crab.ors  door.ors  door_model  main.cpp  man.ors  orsQlin  regal.ors  test.ors  test1.ors  test2.ors  world.ors  y.ors  z.ors  z.ply
KOMO/share/gofMake/: config.mk  defines.mk  generic.mk  make-path.sh
KOMO/share/lib/: .force
KOMO/share/src/Algo/: .lastMake  Makefile.gof  makefile
KOMO/share/src/Core/: .lastMake  Core.dox  Core.doxy  Makefile.gof  array-vector.h  array.dox  array_instantiate.cxx  array_lapack.cpp  array_t.h  core.cpp  geo.cpp  geo.h  keyValueGraph.cpp  keyValueGraph.h  keyValueGraph_t.h  module.cpp  module.h  module_FloatA_Recorder.cpp  module_FloatA_Recorder.h  registry.cpp  registry.h  util_t.h
KOMO/share/src/Gui/: .lastMake  Makefile.gof  geo_qhull.cpp  mesh.cpp  mesh.h  mesh_lewiner.cpp  opengl_fltk.cxx  opengl_freeglut.cxx  opengl_gtk.cxx  opengl_qt.cxx  opengl_qt.h  opengl_void.cxx  ors_opengl.cpp  plot.cpp  plot.h
KOMO/share/src/Motion/: .lastMake  Makefile.gof  adaptiveMotionExecution.cpp  adaptiveMotionExecution.h  dynamicMovementPrimitives.cpp  dynamicMovementPrimitives.h  feedbackControl.cpp  feedbackControl.h  gamepad2tasks.cpp  gamepad2tasks.h  komo.cpp  komo.h  mobject.cpp  mobject.h  motion.cpp  motion.h  motionHeuristics.cpp  motionHeuristics.h  pr2_heuristics.cpp  pr2_heuristics.h  rrt_planner.cpp  rrt_planner.h  taskMap_constrained.cpp  taskMap_constrained.h  taskMap_default.cpp  taskMap_default.h  taskMap_proxy.cpp  taskMap_proxy.h  taskMap_transition.cpp  taskMap_transition.h
KOMO/share/src/Optim/: .lastMake  Makefile.gof  Optim.dox  Optim.doxy  _optimpy.i  cmaes.h  cmaes_interface.h  opt-constrained.cpp  opt-constrained.h  opt-convert.cpp  opt-newton.cpp  opt-newton.h  opt-rprop.cpp  opt-rprop.h  search.h  search_CMA.cpp
KOMO/share/src/Ors/: .lastMake  Makefile.gof  ors.cpp  ors.dox  ors.h  ors_actionInterface.cpp  ors_actionInterface.h  ors_blender.cpp  ors_featherstone.cpp  ors_ode.cpp  ors_ode.h  ors_oldTaskVariables.cpp  ors_oldTaskVariables.h  ors_opengl.cpp  ors_physx.cpp  ors_physx.h  ors_sceneGui.cpp  ors_sceneGui.h  ors_swift.cpp  ors_swift.h  ors_tutorial.cxx  ors_tutorial.h  roboticsCourse.cpp  roboticsCourse.h
iis_control/: CMakeLists.txt  Notes.txt  README.md  package.xml
iis_control/config/: adapter_config.yaml
iis_control/include/: IISRobotHW.h
iis_control/launch/: controllers.launch  start_controllers.launch  start_controllers_simulation.launch
iis_control/src/: IISControllerManager.cpp  IISRobotHW.cpp
iis_control/test/: test_gripper_action_client.cpp
iis_komo/: .gitignore  CMakeLists.txt  README  README.md  package.xml
iis_komo/config/: MT.cfg  adapter_config.yaml
iis_komo/data/: README  env.ors  iis_robot.kvg  move_groups.ors  ors_edit
iis_komo/data/iis_robot/: left_arm.ors  left_sdh.ors  right_arm.ors  right_sdh.ors
iis_komo/data/iis_robot/kuka/: ObjToTri.m  loadObjMesh.m  writeTriMesh.m
iis_komo/data/iis_robot/meshes/: torso.stl  torso_convex.stl  torso_convex2.stl  torso_head.stl  torso_lower.stl  torso_upper.stl
iis_komo/data/iis_robot/schunk/: 3385031017_fus_120_x.tri  3385031517_vbe_0808_x.tri  3385038417_vbe_1008_x.tri  SDH_Kuppe_Finger1_x.tri  schunk_05517281_prl_60_608_x.tri  schunk_05517282fuss_prl_120_1212_x.tri
iis_komo/doc/: KOMO.md
iis_komo/examples/: move_cart.cpp  planning_scene.cpp
iis_komo/include/: iis_robot.h  io_helpers.h  komo_helpers.h  komo_wrapper.h  robot_interface.h  time_parameterization.h  utils.h
iis_komo/launch/: controllers.launch  iis_komo.launch  start_controllers.launch
iis_komo/scripts/: init.sh  run_komo.sh
iis_komo/src/: iis_komo.cpp  info.cpp  komo_wrapper.cpp  main.cpp  robot_interface.cpp  test.cpp  time_parameterization.cpp
iis_komo/test/: move_cart.cpp  move_joint.cpp  performance_test.cpp  performance_test_ik.cpp  reachability_test.cpp  test_KOMO_pick.cpp  test_arm_move.cpp
iis_komo/tmp/: MT.cfg  links.txt  positive_left  positive_right  test_left.out  test_right.out
iis_msgs/: CMakeLists.txt  package.xml
iis_msgs/msg/: AddPrimitiveShape.msg
iis_msgs/srv/: ExecuteTrajectory.srv  PlanTrajectory.srv
